[gd_scene load_steps=10 format=3 uid="uid://px25xdtql4u5"]

[ext_resource type="Texture2D" uid="uid://bxvb8bm7y5jyp" path="res://Assets/UI/button/white/button_rectangle_border.png" id="1_mvmvu"]
[ext_resource type="Script" path="res://Scripts/lvl_up.gd" id="1_vvluf"]
[ext_resource type="Texture2D" uid="uid://jivyt6mcl515" path="res://Assets/icon2.svg" id="2_lu1ln"]
[ext_resource type="Theme" uid="uid://cluu1jwp5aprt" path="res://Resources/UI/title.tres" id="3_skjje"]
[ext_resource type="Texture2D" uid="uid://bfxn81iq1y4x1" path="res://Assets/UI/button/white/button_rectangle_depth_gradient.png" id="4_iap5k"]
[ext_resource type="Texture2D" uid="uid://bxlm35bysyyx6" path="res://Assets/UI/button/white/button_rectangle_gradient.png" id="5_27wrd"]
[ext_resource type="Texture2D" uid="uid://3m7l6kve11of" path="res://Assets/UI/button/white/button_rectangle_depth_flat.png" id="6_v1mhx"]
[ext_resource type="FontFile" uid="uid://cjkomrx3cchcg" path="res://Assets/UI/Kenney Thick.ttf" id="7_py8ut"]

[sub_resource type="Theme" id="Theme_fjs2r"]
default_font_size = 30

[node name="LvlUp" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vvluf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.270588, 0.270588, 0.270588, 0.65098)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(350, 630)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("1_mvmvu")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -266.0
offset_right = 64.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lu1ln")

[node name="Title" type="Label" parent="HBoxContainer/CenterContainer/NinePatchRect"]
layout_mode = 0
offset_left = 29.0
offset_top = 193.0
offset_right = 320.0
offset_bottom = 248.0
theme = ExtResource("3_skjje")
text = "POWER NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desc" type="Label" parent="HBoxContainer/CenterContainer/NinePatchRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 287.0
offset_right = 340.0
offset_bottom = 342.0
theme = SubResource("Theme_fjs2r")
text = "Damage +1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Button" type="TextureButton" parent="HBoxContainer/CenterContainer/NinePatchRect"]
layout_mode = 0
offset_left = 66.0
offset_top = 512.0
offset_right = 258.0
offset_bottom = 576.0
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("4_iap5k")
texture_pressed = ExtResource("5_27wrd")
texture_hover = ExtResource("6_v1mhx")

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer/NinePatchRect/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_py8ut")
text = "SELECT
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(350, 630)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("1_mvmvu")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer2/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -266.0
offset_right = 64.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lu1ln")

[node name="Title" type="Label" parent="HBoxContainer/CenterContainer2/NinePatchRect"]
layout_mode = 0
offset_left = 29.0
offset_top = 193.0
offset_right = 320.0
offset_bottom = 248.0
theme = ExtResource("3_skjje")
text = "POWER NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desc" type="Label" parent="HBoxContainer/CenterContainer2/NinePatchRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 287.0
offset_right = 340.0
offset_bottom = 342.0
theme = SubResource("Theme_fjs2r")
text = "Damage +1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Button" type="TextureButton" parent="HBoxContainer/CenterContainer2/NinePatchRect"]
layout_mode = 0
offset_left = 66.0
offset_top = 512.0
offset_right = 258.0
offset_bottom = 576.0
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("4_iap5k")
texture_pressed = ExtResource("5_27wrd")
texture_hover = ExtResource("6_v1mhx")

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer2/NinePatchRect/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_py8ut")
text = "SELECT
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/CenterContainer3"]
custom_minimum_size = Vector2(350, 630)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("1_mvmvu")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer3/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -266.0
offset_right = 64.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lu1ln")

[node name="Title" type="Label" parent="HBoxContainer/CenterContainer3/NinePatchRect"]
layout_mode = 0
offset_left = 29.0
offset_top = 193.0
offset_right = 320.0
offset_bottom = 248.0
theme = ExtResource("3_skjje")
text = "POWER NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desc" type="Label" parent="HBoxContainer/CenterContainer3/NinePatchRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 287.0
offset_right = 340.0
offset_bottom = 342.0
theme = SubResource("Theme_fjs2r")
text = "Damage +1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Button" type="TextureButton" parent="HBoxContainer/CenterContainer3/NinePatchRect"]
layout_mode = 0
offset_left = 66.0
offset_top = 512.0
offset_right = 258.0
offset_bottom = 576.0
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("4_iap5k")
texture_pressed = ExtResource("5_27wrd")
texture_hover = ExtResource("6_v1mhx")

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer3/NinePatchRect/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_py8ut")
text = "SELECT
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/CenterContainer/NinePatchRect/Button" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer2/NinePatchRect/Button" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer3/NinePatchRect/Button" to="." method="_on_button3_pressed"]
